--- a/src/App/Views/Home/index.html
+++ b/src/App/Views/Home/index.html
@@ -1,141 +1,104 @@
-{% extends '_design.html' %}
+<!DOCTYPE html>
 
-{% block title %}Certificate Monitor{% endblock %}
 
-{% block body %}
+<html lang="en" class="light-style  customizer-hide" dir="ltr" data-theme="theme-default" data-assets-path="{{SITE_ROOT}}/assets/"
+      data-template="vertical-menu-template-no-customizer">
 
-<div class="container-xxl flex-grow-1 container-p-y">
-    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Certificates /</span> Overview</h4>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <!-- Basic Bootstrap Table -->
-    <div class="card">
-        <h5 class="card-header">Table Basic</h5>
-        <div class="table-responsive text-nowrap">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>Servername</th>
-                    <th>Certificate</th>
-                    <th>Issued</th>
-                    <th>Expiration</th>
-                    <th>Actions</th>
-                </tr>
-                </thead>
-                <tbody class="table-border-bottom-0">
-                <tr>
-                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>dc01.domain.com</strong></td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-danger me-1">Expired</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-1"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-1"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><i class="fab fa-react fa-lg text-info me-3"></i> <strong>dc01.domain.com</strong></td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-success me-1">OK</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><i class="fab fa-vuejs fa-lg text-success me-3"></i> <strong>dc01.domain.com</strong></td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-info me-1">Expires in less than 90 days</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="fab fa-bootstrap fa-lg text-primary me-3"></i> <strong>dc01.domain.com</strong>
-                    </td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-warning me-1">Expires in less than 30 days</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                {% for cert in certificates %}
-                <tr>
-                    <td>
-                        <i class="fab fa-bootstrap fa-lg text-primary me-3"></i> <strong>{{ cert.name }}</strong>
-                    </td>
-                    <td>{{ cert.subject }}</td>
-                    <td>{{ cert.validfrom }}</td>
-                    <td><span class="badge bg-label-warning me-1">{{ cert.validto }}</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+    <title>CertMon Usage</title>
+
+    <meta name="description" content="" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{{SITE_ROOT}}/assets/img/favicon/favicon.ico" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+            rel="stylesheet">
+
+    <!-- Core CSS -->
+    <link rel="stylesheet" href="{{SITE_ROOT}}/assets/vendor/css/core.css" />
+    <link rel="stylesheet" href="{{SITE_ROOT}}/assets/vendor/css/theme-default.css" />
+    <link rel="stylesheet" href="{{SITE_ROOT}}/assets/css/demo.css" />
+</head>
+
+<body>
+
+<!-- Content -->
+<div class="container flex-grow-1 container-p-y my-2">
+    <h3>Thank you for using CertMon!</h3>
+    <p>CertMon is free to use and always will be! Built on top of the metamorphosis PHP framework with scalability in mind, delivers on excellent performance with a features rich interface
+    and a nice looking template built by the team over at <a href="https://github.com/themeselection/sneat-html-admin-template-free" target="_blank">Theme Selection</a></p>
+
+    <!-- Examples -->
+    <div class="row mt-sm-4 mt-3">
+        <div class="col-12 mb-3">
+            <div class="card">
+                <h5 class="card-header">CertMon Versioning</h5>
+                <!-- Template Demo Links -->
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <th>System Version</th>
+                        <td><a href="{{SITE_ROOT}}/readme.txt" target="_blank">v1.0</a></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="col-12 mb-3">
+            <div class="card">
+
+                <h5 class="card-header">CertMon Helper Legend</h5>
+                <!-- Other Links -->
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Legend</th>
+                        <th scope="col">Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><span class="badge bg-label-success me-1">OK</span></td>
+                        <td>Description marked in <strong>SUCCESS</strong> will enter in effect when a certificate is not expiring anytime soon</td>
+                    </tr>
+                    <tr>
+                        <td><span class="badge bg-label-info me-1">Expires in less than 90 days</span></td>
+                        <td>Description marked in <strong>INFO</strong> will enter in effect when a certificate is expiring in 90 days or less. First email sent.</td>
+                    </tr>
+                    <tr>
+                        <td><span class="badge bg-label-warning me-1">Expires in less than 60 days</span></td>
+                        <td>Description marked in <strong>WARNING</strong> will enter in effect when a certificate is expiring in 60 days or less. Email sent every 7 days.</td>
+                    </tr>
+                    <tr>
+                        <td><span class="badge bg-label-danger me-1">Expires in less than 30 days</span></td>
+                        <td>Description marked in <strong>INFO</strong> will enter in effect when a certificate is expiring in 30 days or less. Email sent everyday.</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <!--/ Other Links -->
+            </div>
+        </div>
+
+        <div class="col-12 mb-3">
+            <div class="upgrade-to-pro">
+                <a href="/certificate/list" target="_blank"
+                   class="btn btn-danger">Enter <strong>CertMon</strong></a>
+            </div>
         </div>
     </div>
-    <!--/ Basic Bootstrap Table -->
-{% endblock %}
+</div>
+<!-- / Content -->
+
+</body>
+
+</html>
