--- a/src/App/Views/_design.html
+++ b/src/App/Views/_design.html
@@ -46,6 +46,8 @@
 <!-- Layout wrapper -->
 <div class="layout-wrapper layout-content-navbar layout-without-menu">
     <div class="layout-container">
+        <!--  -->
+        {% include '_menu.html' %}
         <!-- Layout container -->
         <div class="layout-page">
         {% include '_navbar.html' %}
@@ -68,17 +70,18 @@
 </div>
 <!-- / Layout wrapper -->
 
+<!-- disabling this for now
 <div class="buy-now">
-    <a href="#" target="_blank" class="btn btn-danger btn-buy-now">Manage Certficates</a>
+    <a href="/certificate/manage" target="_blank" class="btn btn-danger btn-buy-now">Manage Certficates</a>
 </div>
 
+-->
 <!-- Core JS -->
 <!-- build:js assets/vendor/js/core.js -->
 <script src="{{SITE_ROOT}}/assets/vendor/libs/jquery/jquery.js"></script>
 <script src="{{SITE_ROOT}}/assets/vendor/libs/popper/popper.js"></script>
 <script src="{{SITE_ROOT}}/assets/vendor/js/bootstrap.js"></script>
 <script src="{{SITE_ROOT}}/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-
 <script src="{{SITE_ROOT}}/assets/vendor/js/menu.js"></script>
 <!-- endbuild -->
 
