--- a/src/App/Views/Certificate/list.html
+++ b/src/App/Views/Certificate/list.html
@@ -9,7 +9,7 @@
 
     <!-- Basic Bootstrap Table -->
     <div class="card">
-        <h5 class="card-header">Table Basic</h5>
+        <h5 class="card-header">Certificates</h5>
         <div class="table-responsive text-nowrap">
             <table class="table">
                 <thead>
@@ -22,92 +22,6 @@
                 </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
-                <tr>
-                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>dc01.domain.com</strong></td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-danger me-1">Expired</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-1"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-1"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><i class="fab fa-react fa-lg text-info me-3"></i> <strong>dc01.domain.com</strong></td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-success me-1">OK</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td><i class="fab fa-vuejs fa-lg text-success me-3"></i> <strong>dc01.domain.com</strong></td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-info me-1">Expires in less than 90 days</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <i class="fab fa-bootstrap fa-lg text-primary me-3"></i> <strong>dc01.domain.com</strong>
-                    </td>
-                    <td>SSL</td>
-                    <td>DATETIME</td>
-                    <td><span class="badge bg-label-warning me-1">Expires in less than 30 days</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
-                                >
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                >
-                            </div>
-                        </div>
-                    </td>
-                </tr>
                 {% for cert in certificates %}
                 <tr>
                     <td>
@@ -115,17 +29,18 @@
                     </td>
                     <td>{{ cert.subject }}</td>
                     <td>{{ cert.validfrom }}</td>
-                    <td><span class="badge bg-label-warning me-1">{{ cert.validto }}</span></td>
+                    <td><span class="badge bg-label-{{cert.code}} me-1">{{ cert.validto }} ({{cert.daysuntil}})</span>
+                    </td>
                     <td>
                         <div class="dropdown">
                             <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                                 <i class="bx bx-dots-vertical-rounded"></i>
                             </button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="bx bx-edit-alt me-2"></i> Edit</a
+                                <a class="dropdown-item" href="/certificate/detail/{{ cert.filename }}"
+                                ><i class="bx bx-edit-alt me-2"></i> View</a
                                 >
-                                <a class="dropdown-item" href="javascript:void(0);"
+                                <a class="dropdown-item" href="/certificate/delete/confirm/{{ cert.filename }}"
                                 ><i class="bx bx-trash me-2"></i> Delete</a
                                 >
                             </div>
@@ -137,5 +52,6 @@
             </table>
         </div>
     </div>
+</div>
     <!--/ Basic Bootstrap Table -->
     {% endblock %}
