--- a/src/App/Views/_design.html
+++ b/src/App/Views/_design.html
@@ -55,7 +55,11 @@
             <!-- Content wrapper -->
             <div class="content-wrapper">
                 <!-- Content -->
-
+                {% for message in flash_messages %}
+                <div class="alert alert-{{ message.type }}">
+                    {{ message.body }}
+                </div>
+                {% endfor %}
                 <div class="container-xxl flex-grow-1 container-p-y">
                     {% block body %}{% endblock%}
                 </div>
