Initial release of 1.0, no email support. Some code cleanup required, but functional version of CertMon

--- a/src/App/Views/Certificate/add.html
+++ b/src/App/Views/Certificate/add.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="row">
-
+    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Certificates /</span> Add</h4>
     <div class="col-12">
         <div class="card">
             <h5 class="card-header">Add Certificate (Upload)</h5>
@@ -25,7 +25,6 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 
 {% endblock %}
