Added prep for docker, and email support

--- a/src/App/Views/Home/index.html
+++ b/src/App/Views/Home/index.html
@@ -73,15 +73,15 @@
                     </tr>
                     <tr>
                         <td><span class="badge bg-label-info me-1">Expires in less than 90 days</span></td>
-                        <td>Description marked in <strong>INFO</strong> will enter in effect when a certificate is expiring in 90 days or less. First email sent.</td>
+                        <td>Description marked in <strong>INFO</strong> will enter in effect when a certificate is expiring in 90 days or less.</td>
                     </tr>
                     <tr>
                         <td><span class="badge bg-label-warning me-1">Expires in less than 60 days</span></td>
-                        <td>Description marked in <strong>WARNING</strong> will enter in effect when a certificate is expiring in 60 days or less. Email sent every 7 days.</td>
+                        <td>Description marked in <strong>WARNING</strong> will enter in effect when a certificate is expiring in 60 days or less.</td>
                     </tr>
                     <tr>
                         <td><span class="badge bg-label-danger me-1">Expires in less than 30 days</span></td>
-                        <td>Description marked in <strong>INFO</strong> will enter in effect when a certificate is expiring in 30 days or less. Email sent everyday.</td>
+                        <td>Description marked in <strong>INFO</strong> will enter in effect when a certificate is expiring in 30 days or less.</td>
                     </tr>
                     </tbody>
                 </table>
