--- a/src/App/Views/_menu.html
+++ b/src/App/Views/_menu.html
@@ -84,6 +84,12 @@
                 <div data-i18n="Basic">Add Certificate</div>
             </a>
         </li>
+        <li class="menu-item">
+            <a href="/tasks/run" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-mail-send"></i>
+                <div data-i18n="Basic">Send Report</div>
+            </a>
+        </li>
 
         <!-- Misc -->
         <li class="menu-header small text-uppercase"><span class="menu-header-text">Misc</span></li>
