First release of certmon with application running in docker

--- a/src/App/Views/Certificate/list.html
+++ b/src/App/Views/Certificate/list.html
@@ -14,7 +14,7 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>Servername</th>
+                    <th>Certificate Name</th>
                     <th>Issuer</th>
                     <th>Issued</th>
                     <th>Expiration</th>
